--- a/src/App.css
+++ b/src/App.css
@@ -4,3 +4,12 @@
   height: 100vh;
   align-items: center;
 }
+
+.custom-modal-style {
+  height: 50vh;
+}
+
+.iframe{
+  width: 100%;
+  height: 100%;
+}
