--- a/src/VideoList.scss
+++ b/src/VideoList.scss
@@ -7,6 +7,8 @@ ul{
     display: grid;
     grid-template-columns: 1fr;
     column-gap: 16px;
+    row-gap: 32px;
+    margin: 32px 0;
     @media(min-width: 712px){
     grid-template-columns: 1fr 1fr;}
     @media(min-width: 1152px){
