--- a/src/VideoListItem.scss
+++ b/src/VideoListItem.scss
@@ -1,9 +1,15 @@
 .list-item{
     display: grid;
-    grid-template-columns: 20% 1fr 15% 10% 15% 5%;
+    grid-template-columns: 20% 1fr 15% 10% 15% 5% 5%;
     column-gap: 1%;
     padding: 4px 0;
+    &__fav{
+        background: none;
+        border: none;
+    }
     &__heading{
+        display: flex;
+        align-items: center;
         font-size: 14px;
         cursor: pointer;
     }
@@ -13,11 +19,12 @@
         cursor: pointer;
     }
     &__numbers{
-        font-size: 12px;
+        display: flex;
+        align-items: center;
+        font-size: 14px;
     }
     &__remove{
         background: none;
         border: none;
     }
 }
-
