--- a/src/VideoListItem.scss
+++ b/src/VideoListItem.scss
@@ -1,6 +1,6 @@
 .list-item{
     display: grid;
-    grid-template-columns: 20% 1fr 15% 10% 15% 5% 5%;
+    grid-template-columns: 20% 1fr 15% 10% 15% 5% 5% 5%;
     column-gap: 1%;
     padding: 4px 0;
     &__fav{
@@ -11,7 +11,6 @@
         display: flex;
         align-items: center;
         font-size: 14px;
-        cursor: pointer;
     }
     &__img{
         height: 100%;
@@ -22,6 +21,10 @@
         display: flex;
         align-items: center;
         font-size: 14px;
+    }
+    &__play{
+        border: none;
+        background: none;
     }
     &__remove{
         background: none;
